fix: fix chat and footer z-indexes

--- a/src/components/chat/Chat.module.css
+++ b/src/components/chat/Chat.module.css
@@ -77,6 +77,7 @@
 .chat-icon {
   width: 4rem;
   height: auto;
+  transition: all 0.2s ease;
 }
 
 .chat-icon-button:hover {
@@ -95,4 +96,8 @@
 .chat-icon-button-top:hover {
   transform: scale(1);
   font-size: 2.5rem;
+}
+
+.overflow {
+  z-index: 10;
 }
